@@ -22,8 +22,7 @@ WORKDIR /app/
 
 ARG EXTRACTED=/workspace/app/target/extracted
 
-# Add ELK agent
-ADD --chown=user https://search.maven.org/remotecontent?filepath=co/elastic/apm/elastic-apm-agent/1.38.0/elastic-apm-agent-1.38.0.jar ./apm-elk-agent.jar
+ADD --chown=user https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v1.25.1/opentelemetry-javaagent.jar .
 
 COPY --from=build --chown=user ${EXTRACTED}/dependencies/ ./
 RUN true
@@ -34,4 +33,4 @@ RUN true
 COPY --from=build --chown=user ${EXTRACTED}/application/ ./ 
 RUN true
 
-ENTRYPOINT ["java","-javaagent:apm-elk-agent.jar","--enable-preview","org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-javaagent:opentelemetry-javaagent.jar", "org.springframework.boot.loader.JarLauncher"]
